Added multi reward execution & JDK 17 support